src/App.scss
h1, h2, h3, h4, h5, h6, p, li {
    font-family: 'Open Sans', sans-serif;
}

.container {
    max-width: 1400px   !important;
}
.row-logo {
    height: 8em;
    margin-top: 1em;
    margin-bottom: 1em;
    object-fit: scale-down;
    .col {
        img {
            height: 8em;
            object-fit: scale-down;
        }
    }
}

.info-row {
    margin-bottom: 1em;
}

.row-bio {
    .image {
        margin: 0px !important;
        padding: 0px    !important;
        // height: 100%;
        .frame {
            width: 100%;
            position: relative;
            height: 100%;
            overflow: hidden;
            img {
                align-content: center;
                width: 100%;
                height: 100%;
                object-fit: cover;
            }
        }
    }
    .description {
        padding: 4em;
        color: white;
        background-color: #06343f;
    }
}

.row-map {
    height: 22em;
    background-color: #0F758F;
    div {
        padding-left: 0px;
        padding-right: 0px;
    }
    .address {
        color: white;
        div {
            position:absolute;
            top:30%;    
            left:33%;
            width:100%;
            h2 {
                font-size: 2.75em;
            }
            ul {
                margin: 0px 0px 0px 0px;
                padding: 0px 0px 0px 0px;
                list-style: none;
                li {
                    font-size: 1.1em;
                }
            }
        }
    }
}

#copyright {
    font-size: .75em;
    float: right;
    color: #adadad
}

@media only screen and (max-width: 854px) {
    .row-bio {
        .image {
            .frame {
                width: 100%;
                position: relative;
                height: 100%;
                img {
                    align-content: center;
                    width: 100%;
                    height: 100%;
                }
            }
        }
    }
}


@media only screen and (max-width: 768px) {
    .container {
      width: 100%;
    }
    .address {
        display: hidden;
    }
}

